# uva-cs4501-wiot-group2

./: README.md
finalproj/: BLEDeviceScanner.cpp  BLEDeviceScanner.h  README.md  main.cpp
finalproj/backend/: .env  Cargo.toml  data_test  database.db  flake.nix
finalproj/backend/src/: db.rs  main.rs  parse.rs
lab2/postlab/: README.md  main.c
lab2/postlab/ble-scanner/: analyze.py  unique2.csv
lab2/postlab/part2/ble-central/: prj.conf
lab2/postlab/part2/ble-central/src/: main.c
lab2/postlab/part2/ble-peripheral/: prj.conf
lab2/postlab/part2/ble-peripheral/src/: main.c
lab3/postlab/: rx-500ms.txt  rx-800ms.txt  rx.c  tx-500ms.txt  tx-800ms.txt  tx.c
lab7/wifi_scanner/src/: main.cpp
